QA-4929: updated version of hibernate; fixed mapping for sku in BundleOrderItemImpl; clean code